[package]
name = "eris"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.20.1"
tempfile = "3.19.1"
rpassword = "7.3.1"
dialoguer = "0.11.0"
winapi = { version = "0.3", features = ["wincred", "wincrypt", "errhandlingapi", "minwindef", "winerror", "consoleapi", "wincon", "processenv", "winbase"] }

diff = "0.1"
colored = "2.0"